@@ -38,7 +38,7 @@
          "requires" : {
             "DateTime" : "0",
             "DateTime::Duration" : "0",
-            "DateTime::Format::Duration" : "0",
+            "DateTime::Format::Duration::DurationString" : "0",
             "DateTime::Format::Human::Duration" : "0",
             "DateTime::Format::RFC3339" : "0",
             "Safe::Isa" : "0",
