@@ -22,7 +22,7 @@ my %WriteMakefileArgs = (
   "PREREQ_PM" => {
     "DateTime" => 0,
     "DateTime::Duration" => 0,
-    "DateTime::Format::Duration" => 0,
+    "DateTime::Format::Duration::DurationString" => 0,
     "DateTime::Format::Human::Duration" => 0,
     "DateTime::Format::RFC3339" => 0,
     "Safe::Isa" => 0,
@@ -41,7 +41,7 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
   "DateTime" => 0,
   "DateTime::Duration" => 0,
-  "DateTime::Format::Duration" => 0,
+  "DateTime::Format::Duration::DurationString" => 0,
   "DateTime::Format::Human::Duration" => 0,
   "DateTime::Format::RFC3339" => 0,
   "Safe::Isa" => 0,
