@@ -3,7 +3,7 @@ requires 'perl', '5.008005';
 requires 'DateTime';
 requires 'DateTime::Duration';
 requires 'DateTime::Format::RFC3339';
-requires 'DateTime::Format::Duration';
+requires 'DateTime::Format::Duration::DurationString';
 requires 'DateTime::Format::Human::Duration';
 requires 'Safe::Isa';
 requires 'Test::Deep';
